--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "react-native-safe-area-context": "^3.1.3",
     "react-native-screens": "^2.10.1",
     "react-native-web": "~0.11.7",
-    "react-navigation-header-buttons": "^5.0.0"
+    "react-navigation-header-buttons": "^5.0.0",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
