--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "expo-image-picker": "~8.3.0"
+    "expo-image-picker": "~8.3.0",
+    "expo-permissions": "~9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
